--- a/src/my_package/CMakeLists.txt
+++ b/src/my_package/CMakeLists.txt
@@ -24,8 +24,7 @@ if(BUILD_TESTING)
 endif()
 
 install(DIRECTORY launch
-  DESTINATION share/${agv_bot}
+  DESTINATION share/${PROJECT_NAME}
 )
-
 
 ament_package()
